--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ version = "0.1.0"
 dependencies = [
     # REQ.DEPS: External packages used by the project code.
     "datafun-toolkit>=0.9.4",
+    "ipykernel>=7.1.0",
+    "matplotlib>=3.10.8",
+    "pandas>=3.0.0",
+    "psycopg2-binary>=2.9.11",
+    "sqlalchemy>=2.0.46",
 ]
 
 [project.optional-dependencies]
